# carestack

./: .gitignore  Cargo.toml  README.md
src/: main.rs  manager.rs
types/src/: lib.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.css  App.js  configs.js  index.js
ui/src/components/Alert/: Alert.js
ui/src/components/Button/: Button.js  styles.css
ui/src/components/Field/: Field.js  styles.css
ui/src/components/Friend/: Friend.js  styles.css
ui/src/components/Loader/: Loader.js  styles.css
ui/src/components/Picker/: Picker.js  styles.css
ui/src/pages/AuthCheck/: AuthCheck.js
ui/src/pages/Find/: Find.js  styles.css
ui/src/pages/Home/: Home.js  styles.css
ui/src/pages/Login/: Login.js  styles.css
ui/src/pages/Mutual/: Mutual.js  styles.css
ui/src/pages/NotFriends/: NotFriends.js  styles.css
ui/src/pages/Profile/: ProfilePage.js  styles.css
ui/src/pages/SignUp/: SignUp.js  styles.css
