[package]
name = "carestack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types={ path = "./types" }
actix-web = "4"
actix-files="^0.6"
actix-web-actors="4.1.0"
mongodb="2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0.85"
env_logger="0.9.0"
futures-util = "0.3"
